==============
lxml changelog
==============

2.3 (under development)
=======================

Features added
--------------

* XSLT extension elements: support for XSLT context nodes other than
  elements: document root, comments, processing instructions.

* Support for strings (in addition to Elements) in node-sets returned
  by extension functions.

* Forms that lack an ``action`` attribute default to the base URL of
  the document on submit.

* XPath attribute result strings have an ``attrname`` property.

* Namespace URIs get validated against RFC 3986 at the API level
  (required by the XML namespace specification).

* Target parsers show their target object in the ``.target`` property
  (compatible with ElementTree).

Bugs fixed
----------

* ``lxml.cssselect`` did not distinguish between ``x[attr="val"]`` and
  ``x [attr="val"]`` (with a space).  The latter now matches the
  attribute independent of the element.

* Rewriting multiple links inside of HTML text content could end up
  replacing unrelated content as replacements could impact the
  reported position of subsequent matches.  Modifications are now
  simplified by letting the ``iterlinks()`` generator in ``lxml.html``
  return links in reversed order if they appear inside the same text
  node.  Thus, replacements and link-internal modifications no longer
  change the position of links reported afterwards.

* The ``.value`` attribute of ``textarea`` elements in lxml.html did
  not represent the complete raw value (including child tags etc.). It
  now serialises the complete content on read and replaces the
  complete content by a string on write.

* Target parser didn't call ``.close()`` on the target object if
  parsing failed.  Now it is guaranteed that ``.close()`` will be
  called after parsing, regardless of the outcome.

Other changes
-------------

* ``Element.attrib`` no longer uses a cyclic reference back to its
  Element object.  It therefore no longer requires the garbage